<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="entriesLoc">
        <item>Простой</item>
        <item>Математический</item>
    </string-array>


    <string name="app_name">WakeUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_loc">LocActivity</string>
    <string name="title_activity_show_alarm">ShowAlarm</string>
    <string name="everydayText">Повторять ежедневно</string>
    <string name="contentToSpeach">Озвучивать описание</string>
    <string name="content">Описание:</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="Toast_alarm_created">Будильник сохранен</string>
    <string name="edit_note_text">Редактировать</string>
    <string name="delete_note_text">Удалить</string>
    <string name="settings">Настройки</string>
    <string name="loc">Экран отключения будильника</string>
    <string name="to_off_arithmetic_loc">Для отключения будильника решите пример</string>
    <string name="close">Закрыть</string>
    <string name="descripnionOnProverb">Включено отображение высказаваний</string>
    <string name="descripnionOffProverb">Выключено отображение высказаваний</string>
    <string name="keyListLocActivity">listLocActivity</string>
    <string name="proverbCheckBox">Высказывания после отключения будильника</string>
    <string name="keyProverbCheckBox">proverbCheckBox</string>
    <string name="alarmAlreadyExisted">Будильник на заданное время уже существует</string>
    <string name="changesSaved">Изменения сохранены</string>
    <string name="everyday">Ежедневно</string>
    <string name="alarmDeleted">Будильник удален</string>
    <string name="delay">Интервал повтора</string>
    <string name="offDelayDescription">Повтор будильника выключен</string>
    <string name="onDelayDescription">Повтор будильника включен</string>
    <string name="timeDelay">Длительность интервала (мин)</string>
    <string name="keySetDelay">setDelay</string>
    <string name="keyDelay">Delay</string>



</resources>
