<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:entries="@array/entriesLoc"
        android:entryValues="@array/entriesLoc"
        android:key="@string/keyListLocActivity"
        android:title="@string/loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ListPreference>

    <CheckBoxPreference
        android:key="@string/keyProverbCheckBox"
        android:summaryOff="@string/descripnionOffProverb"
        android:summaryOn="@string/descripnionOnProverb"
        android:title="@string/proverbCheckBox">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="@string/keyDelay"
        android:summaryOff="@string/offDelayDescription"
        android:summaryOn="@string/onDelayDescription"
        android:title="@string/delay">
    </CheckBoxPreference>

    <EditTextPreference
        android:key="@string/keySetDelay"
        android:title="@string/timeDelay"
        android:dependency="@string/keyDelay">
    </EditTextPreference>




</PreferenceScreen>
